# react-native-fast-base64

android/: CMakeLists.txt
